bug 459629 - Avoid code path with LoadLibraryEx called with LOAD_WITH_ALTERED_SEARCH_PATH in nsGlueLinkingWin for windows ce